# time-series-llm

./: .gitignore  README.md
fms-dgt/: .gitignore  .pre-commit-config.yaml  .prettierignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
fms-dgt/.github/: CODEOWNERS  pull_request_template.md
fms-dgt/configs/core/: simple_full_config.yaml  watsonx_simple.yaml
fms-dgt/configs/public/: time_series_smoke.yaml
fms-dgt/configs/public/instructlab/: watsonx_knowledge.yaml  watsonx_skills.yaml
fms-dgt/data/public/examples/rate/: data.jsonl
fms-dgt/data/public/magpie/: data.jsonl
fms-dgt/data/public/time_series/: bikesharing_full.parquet  monash_nn5_full.parquet
fms-dgt/docs/: index.md  installation.md  usage.md
fms-dgt/docs/concepts/: architecture.md  blocks.md  databuilders.md  tasks.md
fms-dgt/docs/examples/: generate_data.md  generate_qa_over_knowledge.md  transform_data.md
fms-dgt/docs/tutorials/: changing_lm_engine.md  creating_validator.md  loading_seed_examples_from_file.md
fms-dgt/fms_dgt/: __init__.py  __main__.py  constants.py  generate_data.py  index.py  utils.py
fms-dgt/fms_dgt/base/: block.py  data_objects.py  databuilder.py  dataloader.py  datastore.py  formatter.py  multiprocessing.py  prompt.py  registry.py  task.py  task_card.py
fms-dgt/fms_dgt/core/: __main__.py
fms-dgt/fms_dgt/core/blocks/llm/: __init__.py  anthropic.py  azure_openai.py  llm.py  ollama.py  openai.py  utils.py  watsonx.py
fms-dgt/fms_dgt/core/blocks/trainer/: trainer.py
fms-dgt/fms_dgt/core/blocks/utilities/: field_map.py  flatten_field.py
fms-dgt/fms_dgt/core/blocks/validators/: lm_judge.py  noop.py  rouge.py  tool_calling.py
fms-dgt/fms_dgt/core/databuilders/simple/: README.md  data_objects.py  generate.py  simple.yaml  task.py  utils.py
fms-dgt/fms_dgt/core/dataloaders/: __init__.py  default.py  simple.py
fms-dgt/fms_dgt/core/datastores/: default.py  multi.py
fms-dgt/fms_dgt/core/formatters/: native.py  template_based.py
fms-dgt/fms_dgt/core/resources/: api.py  watsonx.py
fms-dgt/fms_dgt/public/: __main__.py
fms-dgt/scripts/: prepare_pamap2_subject101.py
fms-dgt/slurm/: run_sdforger_formal_gpu.sh  run_sdforger_pamap2_formal_gpu.sh  run_sdforger_pamap2_smoke_gpu.sh  run_sdforger_smoke_allin1_gpu.sh  run_sdforger_smoke_gpu.sh  setup_sdforger_env.sh
fms-dgt/tasks/public/magpie/: task.yaml
fms-dgt/tests/base/: test_databuilder_execution.py  test_load_task_file.py  test_utils.py
fms-dgt/tests/core/: __init__.py
fms-dgt/tests/core/dataloaders/: test_default.py  test_simple.py
fms-dgt/tests/core/datastores/: test_default.py  test_multi_target.py
(+240 files in other folders)
